backport 1042090 from trunk:

PR44076: allow "userdir disabled" or "userdir public_html" in global scope to
    be merged with lists of enabled users in virtual host context as one would 
    expect.

Reviewed by: covener, rpluem, poirier


git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/branches/2.2.x@1068257 13f79535-47bb-0310-9956-ffa450edef68